# scdetect

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md
src/apps/cc/: CMakeLists.txt  amplitude_processor.cpp  amplitude_processor.h  app.cpp  app.h  binding.cpp  binding.h  builder.cpp  builder.h  builder.ipp  combining_amplitude_processor.cpp  combining_amplitude_processor.h  def.h  eventstore.h  exception.h  factory.h  filter.cpp  filter.h  log.h  magnitude_processor.cpp  magnitude_processor.h  reducing_amplitude_processor.cpp  reducing_amplitude_processor.h  resamplerstore.h  settings.h  template_family.cpp  template_family.h  template_waveform.h  version.h  waveform.cpp  waveform.h
src/apps/cc/amplitude/: factory.cpp  factory.h  mlx.cpp  mlx.h  mrelative.cpp  mrelative.h  ratio.cpp  ratio.h  rms.cpp  rms.h  util.cpp  util.h
src/apps/cc/config/: detector.cpp  detector.h  exception.cpp  exception.h  template_family.cpp  template_family.h  validators.cpp  validators.h
src/apps/cc/datamodel/: ddl.h
src/apps/cc/descriptions/: scdetect-cc.xml
src/apps/cc/detail/: sqlite.cpp  sqlite.h
src/apps/cc/detector/: arrival.h  arrival.ipp  detail.h  detector.cpp  detector.h  detector_impl.cpp  detector_impl.h  detectorbuilder.cpp  detectorbuilder.h  detectorwaveformprocessor.h  linker.cpp  linker.h  template_waveform_processor.cpp  template_waveform_processor.h  templatewaveformprocessor.cpp  templatewaveformprocessor.h
src/apps/cc/detector/linker/: association.cpp  association.h  exception.cpp  exception.h  pot.cpp  pot.h  strategy.h  strategy.ipp
src/apps/cc/filter/: crosscorrelation.h  crosscorrelation.ipp
src/apps/cc/json-schema/: templates.schema.json
src/apps/cc/magnitude/: decorator.h  factory.cpp  factory.h  mlx.cpp  mlx.h  mrelative.cpp  mrelative.h  mwx.cpp  mwx.h  regression.h  template_family.h  util.cpp  util.h
src/apps/cc/magnitude/decorator/: range.h
src/apps/cc/operator/: resample.h  ringbuffer.h
src/apps/cc/perf/: CMakeLists.txt  Makefile  README.md  app.cpp  perf.h  perf.py  prepare_waveform_data.cpp  prepare_waveform_data.py
src/apps/cc/perf/data/app/: catalog.scml
src/apps/cc/processing/: processor.h  stream.h  stream_config.h  timewindow_processor.cpp  timewindow_processor.h  waveform_operator.cpp  waveform_operator.h  waveform_processor.cpp  waveform_processor.h
src/apps/cc/processing/detail/: gap_interpolate.cpp  gap_interpolate.h
src/apps/cc/test/: CMakeLists.txt  LSan.supp  filter_crosscorrelation.cpp  fixture.cpp  fixture.h  integration.cpp  integration_utils.cpp  integration_utils.h  integration_utils.ipp  reducing_amplitude_processor.cpp  utils.h  utils.ipp
src/apps/cc/test/data/integration/: dataset.conf
src/apps/cc/util/: factory.h  filter.h  floating_point_comparison.h  horizontal_components.h  math.h  memory.h  util.cpp  util.h  waveform_stream_id.cpp  waveform_stream_id.h
src/apps/scdetect/: CMakeLists.txt  amplitude_processor.cpp  amplitude_processor.h  amplitudeprocessor.cpp  amplitudeprocessor.h  app.cpp  app.h  binding.cpp  binding.h  builder.cpp  builder.h  builder.ipp  combining_amplitude_processor.cpp  combining_amplitude_processor.h  config.cpp  config.h  def.h  detector.cpp  detector.h  eventstore.cpp  eventstore.h  exception.cpp  exception.h  factory.h  filter.cpp  filter.h  log.cpp  log.h  magnitude_processor.cpp  magnitude_processor.h  magnitudeprocessor.cpp  magnitudeprocessor.h  main.cpp  processor.cpp  processor.h  reducing_amplitude_processor.cpp  reducing_amplitude_processor.h  resamplerstore.cpp  resamplerstore.h  settings.h  (+25 more)
src/apps/scdetect/amplitude/: factory.cpp  factory.h  mrelative.cpp  mrelative.h  ratio.cpp  ratio.h  rms.cpp  rms.h
src/apps/scdetect/config/: detector.cpp  detector.h  template_family.cpp  template_family.h  validators.cpp  validators.h
src/apps/scdetect/datamodel/: ddl.cpp  ddl.h
src/apps/scdetect/descriptions/: scdetect.xml
src/apps/scdetect/detail/: sqlite.cpp  sqlite.h
src/apps/scdetect/detector/: arrival.cpp  arrival.h  detector.cpp  detector.h  detectorbuilder.cpp  detectorbuilder.h  detectorwaveformprocessor.cpp  detectorwaveformprocessor.h  linker.cpp  linker.h  pot.cpp  pot.h  result.h  template.cpp  template.h  templatewaveformprocessor.cpp  templatewaveformprocessor.h
src/apps/scdetect/detector/linker/: association.cpp  association.h  event.cpp  event.h  pot.cpp  pot.h  strategy.cpp  strategy.h  strategy.ipp
src/apps/scdetect/filter/: crosscorrelation.h  crosscorrelation.ipp
src/apps/scdetect/json-schema/: templates.schema.json
src/apps/scdetect/magnitude/: decorator.cpp  decorator.h  factory.cpp  factory.h  mrelative.cpp  regression.cpp  regression.h  template_family.cpp  templatefamily.cpp  templatefamily.h  util.cpp  util.h
src/apps/scdetect/magnitude/decorator/: range.cpp  range.h  util.cpp  util.h
src/apps/scdetect/mixin/: gapinterpolate.h  gapinterpolate.ipp
src/apps/scdetect/operator/: resample.cpp  resample.h  ringbuffer.cpp  ringbuffer.h
src/apps/scdetect/processing/: processor.cpp  stream.cpp  stream.h  timewindow_processor.cpp  timewindow_processor.h  waveform_operator.cpp  waveform_operator.h  waveform_processor.cpp  waveform_processor.h
src/apps/scdetect/processing/detail/: gap_interpolate.cpp  gap_interpolate.h
src/apps/scdetect/processing/mixin/: gap_interpolate.h  gap_interpolate.ipp
src/apps/scdetect/test/: CMakeLists.txt  filter_crosscorrelation.cpp  foo.cpp  integration.cpp  integration.h  integration_utils.cpp  integration_utils.h  integration_utils.ipp  myapp.cpp  reducing_amplitude_processor.cpp  reducingamplitudeprocessor.cpp  template_xcorr.cpp  util_math_cma.cpp  utils.cpp  utils.h  utils.ipp  utils_cma.cpp
src/apps/scdetect/test/data/: seiscomp_db.sqlite
src/apps/scdetect/test/data/integration-multi-detector-single-stream-simple-with-picks/: expected.scml  (+1 more)
src/apps/scdetect/util/: factory.h  filter.cpp  filter.h  floating_point_comparison.h  horizontal_components.cpp  horizontal_components.h  three_components.cpp  three_components.h  waveform_stream_id.cpp  waveform_stream_id.h
(+516 files in other folders)
